# gemini-batcher

./: .gitignore  LICENSE  README.md  chunking.py  geminiapi.py  notes.md  pyproject.toml
docs/: _config.yml  index.md  library_quickstart.md
docs/concepts/: caching.md  error_handling.md  fixed_batching.md  fixed_chunking.md  index.md  interlinked_questions.md  multimedia.md  other_techniques.md  setup.md
docs/library_quickstart/: basic_usage.md  index.md  inputs.md  media_techniques.md  setup.md  structure.md  text_techniques.md
docs/logic/: batching.md  chunking.md  index.md
example-content/: batching.ipynb  chunking.ipynb  content.txt  demo.ipynb  example.py  questions.txt
examples/: batching.ipynb  batching_and_chunking.ipynb  caching.ipynb  chunking.ipynb  demo.ipynb  other_techniques.ipynb
examples/demo_files/: content.txt  questions.txt
gemini_batcher/: __init__.py  gemini_batcher.py  gemini_config.py  gemini_handler.py  geminiapi.py  geminihandler.py  mediachunker.py  response.py  strategies.py
gemini_batcher/gemini_functions/: gemini_api.py
gemini_batcher/input_handler/: media_inputs.py  other_inputs.py  otherinputs.py  text_inputs.py
gemini_batcher/processor/: dynamic_batch.py  media_chunk_and_batch.py  text_chunk_and_batch.py
gemini_batcher/strategies/: batching_strategies.py  media_chunking_strategies.py  text_chunking_strategies.py
gemini_batcher/utils/: exception_parser.py  exceptionparser.py  exceptions.py  json_templates.py
gemini_efficient_api_calls/: __init__.py  chunker.py  geminiapi.py  geminihandler.py
(+3 files in other folders)
